feat: adicionado rota de filtros por linguagem e título ou data
